# random_story

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  schema.sql  start-dev.sh
.sisyphus/: boulder.json  handoff-rebirth-frontend-mvp.md
.sisyphus/evidence/: task-1-deps.txt  task-1-health-check.txt  task-1-structure.txt  task-10-event-loop.txt  task-11-gameover.txt  task-12-theme.txt  task-13-mobile.txt  task-14-error.txt  task-15-unit-tests.txt  task-16-e2e.txt  task-17-integration.txt  task-2-types.txt  task-3-api-types.txt  task-4-router.txt  task-5-talents.txt  task-6-state.txt  task-7-typewriter.txt  task-8-title.txt  task-9-talent-flow.txt
.sisyphus/plans/: ai-narrative-aftermath-fix.md  rebirth-backend-mvp.md  rebirth-frontend-mvp.md  structural-fix.md
app/: config.py  database.py  dependencies.py  main.py
app/data/: realms.yaml  rebirth.db-shm  rebirth.db-wal  sects.yaml  talents.yaml  validate_data.py
app/models/: event.py  game.py  memory.py  player.py  save.py  tags.py
app/repositories/: game_repo.py
app/routers/: game.py  save.py
app/services/: AGENTS.md  ai_service.py  ai_validator.py  breakthrough.py  cache_service.py  context_engine.py  event_engine.py  event_factory.py  game_service.py  (+5 more)
docker/: Dockerfile  README.md  docker-compose.yml
tests/: test_config.py  test_database.py  test_e2e.py  test_edge_cases.py  test_game_repo.py  test_models.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vitest.config.ts
(+282 files in other folders)
