[project]
name = "rebirth-backend"
version = "0.1.0"
description = "重生模拟器后端 API"
readme = "README.md"
authors = [
    { name = "chenhao", email = "chenhao1@hdkj123.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
